# mcp-frigate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: charts-test-deployment.yaml  meta-sync-labels.yaml  release-containers.yaml  release-helm-charts.yaml  renovate-dry-run.yaml  renovate-schedule.yaml
containers/frigate-mcp/: Dockerfile
src/: CHANGELOG.md
src/frigate_mcp/: __init__.py  config.py  server.py
