[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frigate-mcp"
version = "0.1.0"
description = "MCP server for Frigate NVR"
requires-python = ">=3.10"
authors = [
    { name = "Kien Nguyen / Claude Sonnet 4.5" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
frigate-mcp = "frigate_mcp.server:main"
frigate-mcp-sse = "frigate_mcp.server:serve_sse"
frigate-mcp-http = "frigate_mcp.server:serve_http"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
